k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: energy-dashboard
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: backend
      - maxSkew: 1
        topologyKey: node
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: backend
      containers:
      - name: backend
        image: $BACKEND_IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            port: 80
            path: /health
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            # CPython doesn't benefit from more than 1 CPU
            cpu: 1000m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
