k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: energy-dashboard
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
